# Copyright (c) 2007-2015 The OpenRC Authors.
# See the Authors file at the top-level directory of this distribution and
# https://github.com/OpenRC/openrc/blob/master/AUTHORS
#
# This file is part of OpenRC. It is subject to the license terms in
# the LICENSE file found in the top-level directory of this
# distribution and at https://github.com/OpenRC/openrc/blob/master/LICENSE
# This file may not be copied, modified, propagated, or distributed
# except according to the terms contained in the LICENSE file.

subdir('libeinfo')
subdir('librc')
subdir('rc')
subdir('test')

# TODO : update test scripts, make it can run in build directory
# check_cmd = 'cp -afr @0@/test @1@; cd @2@; ./runtests.sh'.format(
#   meson.current_source_dir(),
#   meson.current_build_dir(),
#   join_paths(meson.current_build_dir(), 'test'),
# )

# verbose_check_cmd = 'cp -afr @0@/test @1@; cd @2@; ./runtests.sh'.format(
#   meson.current_source_dir(),
#   meson.current_build_dir(),
#   join_paths(meson.current_build_dir(), 'test'),
# )

# run_target(
#   'check',
#   command : ['sh', '-c', check_cmd],
# )

# run_target(
#   'verbose-check',
#   command : ['sh', '-c', verbose_check_cmd],
# )
