script_conf_data = configuration_data()
script_conf_data.set('SBINDIR', sbindir)

subdir('shared')
subdir('libeinfo')
subdir('librc')
subdir('checkpath')
subdir('einfo')
subdir('fstabinfo')
subdir('halt')
subdir('is_newer_than')
subdir('is_older_than')
subdir('kill_all')
subdir('mark_service')
subdir('mountinfo')
subdir('on_ac_power')
subdir('openrc')
subdir('openrc-init')
subdir('openrc-run')
subdir('openrc-shutdown')
subdir('poweroff')
subdir('rc-abort')
subdir('rc-depend')
subdir('rc-service')
subdir('rc-sstat')
subdir('rc-status')
subdir('rc-update')
subdir('reboot')
subdir('service')
subdir('seedrng')
subdir('shell_var')
subdir('shutdown')
subdir('start-stop-daemon')
subdir('supervise-daemon')
subdir('swclock')
subdir('value')
